--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
+    "@capacitor/storage": "^1.2.4",
     "@ionic/angular": "^6.0.0",
     "codelyzer": "^6.0.2",
     "rxjs": "~6.6.0",
