--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/storage": "^1.2.4",
     "@ionic/angular": "^6.0.0",
     "codelyzer": "^6.0.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
