--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@capacitor/app": "1.0.7",
+    "@capacitor/android": "3.6.0",
+    "@capacitor/app": "^1.1.1",
     "@capacitor/core": "3.3.4",
-    "@capacitor/haptics": "1.1.3",
-    "@capacitor/keyboard": "1.2.0",
-    "@capacitor/status-bar": "1.0.6",
-    "@capacitor/storage": "^1.2.4",
-    "@ionic/angular": "^6.0.0",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/keyboard": "^1.2.3",
+    "@capacitor/status-bar": "^1.0.8",
+    "@capacitor/storage": "^1.2.5",
+    "@ionic/angular": "^6.1.15",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "codelyzer": "^6.0.2",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.1",
@@ -47,7 +50,7 @@
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.6.0",
@@ -56,11 +59,11 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
